Fixed layout issues and styled canvas

--- a/styles.css
+++ b/styles.css
@@ -75,4 +75,11 @@ nav {
     opacity: .5;
 }
 
+.GameCanvas {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 2rem;
+}
+
 
